--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.2"
+    "next": "15.2.2",
+    "@azure/storage-blob": "^12.26.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
+    "@types/uuid": "^10.0.0",
+    "dotenv": "^16.4.7"
   },
   "devDependencies": {
     "typescript": "^5",
